# gtk-server

./: .gitignore  CREDITS  README.1ST
demo-gtk2/: calculator.bash.ipc  calculator.ksh.stdin  clock.bash  converter.glade  demo-fifo.awk  demo-fifo.pl  demo-ipc.yab  demo-lib.pl  demo-sock.bash  demo-stdin.awk  demo-stdin.lsp  demo-stdin.pl  demo-stdin.tcl  demo-tcp.lsp  lists.bash  openglarea.ksh  openglext.bash  openglext.ksh  poppler.bash  poppler.ksh  webkit.bash
demo-gtk3/: clock.bash  demo-fifo.awk  demo-fifo.bash  demo-stdin.awk  demo-tcp.awk  dict.awk  lists.bash  noconfig.bash  poppler.ksh
demo-hug-gtk2/: gdf.bash  gdf.ksh  hug-test1.ksh  hug-test2.ksh  hug.txt  tetris.bash  tetris.ksh
demo-hug-gtk3/: gdf.ksh  hug-test2.bash  radio.ksh  tetris.ksh
demo-motif/: base64.bash  demo-stdin.ksh
demo-other/: mikmod.gtkserver  ncurses.gtkserver
demo-xf/: clock.bash  demo-stdin.ksh  openglxf.ksh
documentation/: GTK-server_Tutorial.html  Hints.Solaris  gtk-server.1  gtk-server.cfg.1  gtk-server.cfg.1.html
gtk-server/: CREDITS  INSTALL  Makefile.in  README.1ST  config.h.in  configure  configure.in  gtk-server.c  gtk-server.cfg  gtk-server.spec  select-gtk-server  stop-gtk-server
gtk-server/demo-gtk2/: calculator.bash.fifo  calculator.bash.ipc  calculator.ksh.fifo  calculator.ksh.stdin  clock.bash  clock.ksh  converter.bash  demo-fifo.awk  demo-fifo.bash  demo-fifo.csh  demo-fifo.ksh  demo-fifo.lsp  demo-fifo.pl  demo-ipc.awk  demo-ipc.bash  demo-ipc.ksh  demo-ipc.lsp  demo-ipc.yab  demo-lib.lsp  demo-lib.pl  demo-sock.bash  demo-sock.lsp  demo-stdin.awk  demo-stdin.clisp  demo-stdin.ksh  demo-stdin.lsp  demo-stdin.pl  demo-stdin.tcl  demo-tcp.awk  demo-tcp.bash  demo-tcp.clisp  demo-tcp.lsp  demo-udp.awk  demo-udp.lsp  dict.awk  glade.glade  glade.ksh  gtksheet.bash  lists.ksh  mozilla.bash  (+11 more)
gtk-server/demo-gtk3/: clock.bash  clock.ksh  demo-fifo.awk  demo-fifo.m4  demo-ipc.m4  demo-stdin.awk  demo-stdin.ksh  demo-tcp.awk  dict.awk  lists.bash  lists.ksh  noconfig.ksh  poppler.bash  poppler.ksh  webkit.bash
gtk-server/demo-hug-gtk2/: hug-test1.bash  hug-test2.bash  tetris.bash  tetris.sock
gtk-server/demo-hug-gtk3/: gdf.bash  gdf.ksh  hug-test1.bash  hug-test1.ksh  hug-test2.bash  hug-test2.ksh  hug.txt  qradio.xpm  radio.bash  radio.ksh  tetris.bash  tetris.ksh
gtk-server/demo-motif/: button.ksh  demo-stdin.ksh  motif.ksh
gtk-server/demo-other/: mikmod.bash  mikmod.ksh  mikmod.m4
gtk-server/demo-xf/: clock.bash  clock.ksh  demo-fifo.bash  demo-lib.lsp  demo-stdin.ksh  openglxf.bash  openglxf.ksh
gtk-server/documentation/: GTK-server_Manual.html  Hints.Linux  Hints.MacOSX  gtk-server.1  gtk-server.1.html  gtk-server.cfg.1  gtk-server.cfg.1.html  stop-gtk-server.1
gtk-server/hug-gtk2/: gdf.bash  gdf.ksh  hug-test1.bash  hug-test1.ksh  hug-test2.ksh  hug.txt  tetris.bash  tetris.ksh
gtk-server/hug-gtk3/: gdf.bash  gdf.ksh  hug-test1.bash  hug-test1.ksh  hug-test2.ksh  hug.txt  tetris.bash  tetris.ksh
gtk-server/ksh93/: demo-lib.ksh
gtk-server/other/: mikmod.bash  mikmod.gtkserver  mikmod.ksh  ncurses.gtkserver  welcome.mod
gtk-server/s-lang/: GTK_SERVER_README.1ST  demo-lib.sl
gtk-server/scriptbasic/: GTK_SERVER_README.1ST  demo.sb  dictionary.sb  doc.html  generate.sb
gtk-server/src/: Makefile.in  configure  configure.in  gtk-server.c  gtk-server.cfg  gtk-server.spec
ksh93/: GTK_SERVER_README.1ST
scriptbasic/: embedded.sb  go.bas  gtk.bas  openglext.sb
src/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure.in  generate_config_file  gtk-server.c  gtk-server.spec  select-gtk-server  stop-gtk-server
